--- a/20-host-git-action.yml
+++ b/20-host-git-action.yml
@@ -5,9 +5,7 @@
     - !host
       id: "Demo-Auth-Retrieval-Workflow"
       annotations:
-        authn-jwt/github/repository: ztwright/hackisack 
-        authn-jwt/github/ref: refs/heads/2-h2c-demo
-        authn-jwt/github/runner_environment: self-hosted
+        authn-jwt/github/repository: 
            
     - !grant
       role: !group
